Bug:  PRD Reviewer:  Self Comments:  Changes for Filr integration.  {131st} 1. Added a 1/2 second delay to the inital resizing of a folder view's    content to try to eliminate the occasional double scroll bars. 2. Added IE specific opacity handling to the binder view styles. 3. Enabled the permalinks footer in Filr now that it has been reworded    to be Filr specific.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/CalendarFolderView.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/FolderViewBase.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/DataTableFolderViewBase.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/TaskFolderView.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -152,7 +152,7 @@
 		.vibe-dataTableAssignment-list            {}
 		.vibe-dataTableAssignment-panel           {white-space: nowrap;}
 		.vibe-dataTableComments-panel             {background: url(images/comments_25.png) no-repeat scroll center center transparent; color: #135c8f; font-size: 12px; font-weight: bold; padding-top: 2px; padding-bottom: 5px; padding-left: 8px; padding-right: 8px; text-align: center; display: inline;}
-		.vibe-dataTableComments-panel0            {opacity: 0.4;}
+		.vibe-dataTableComments-panel0            {opacity: 0.4; filter: alpha(opacity=40);}
 		.vibe-dataTableCustom-anchor              {}
 		.vibe-dataTableCustom-anchor-label        {}
 		.vibe-dataTableCustom-event               {}
@@ -342,10 +342,10 @@
 /* End:  Add files dialog styles. */
 
 /* Start:  Add files via HTML5 styles. */
-	.vibe-addFilesHtml5Popup                             {z-index: 1000; border: 3px solid #09f !important; -moz-border-radius !important: 15px; border-radius: 15px !important; -webkit-border-radius !important: 15px; opacity: 0.7; background: #abced1 url("images/trans_blue_stripes.png") repeat !important;}
-	.vibe-addFilesHtml5Popup-closePanel                  {color: #FFFFFF; background-color: transparent !important; opacity: 1.0 !important; font-size: 0.8em; position: absolute; right: -12px; top: -12px; z-index: 1001;}
+	.vibe-addFilesHtml5Popup                             {z-index: 1000; border: 3px solid #09f !important; -moz-border-radius !important: 15px; border-radius: 15px !important; -webkit-border-radius !important: 15px; opacity: 0.7; filter: alpha(opacity=70); background: #abced1 url("images/trans_blue_stripes.png") repeat !important;}
+	.vibe-addFilesHtml5Popup-closePanel                  {color: #FFFFFF; background-color: transparent !important; opacity: 1.0 !important; filter: alpha(opacity=100) !important; font-size: 0.8em; position: absolute; right: -12px; top: -12px; z-index: 1001;}
 	.vibe-addFilesHtml5Popup-closePanel:hover            {cursor: pointer;}
-	.vibe-addFilesHtml5Popup-hover                       {border: 3px solid #ebaf1b !important; -moz-border-radius: 15px !important; border-radius: 15px !important; -webkit-border-radius: 15px !important; opacity: 0.7; background: #f2ef91 url("images/trans_yellow_stripes.png") repeat !important;}
+	.vibe-addFilesHtml5Popup-hover                       {border: 3px solid #ebaf1b !important; -moz-border-radius: 15px !important; border-radius: 15px !important; -webkit-border-radius: 15px !important; opacity: 0.7; filter: alpha(opacity=70); background: #f2ef91 url("images/trans_yellow_stripes.png") repeat !important;}
 	.vibe-addFilesHtml5Popup-dndPanel                    {position: relative;}
 	.vibe-addFilesHtml5Popup-dndPanelHover               {}
 	.vibe-addFilesHtml5Popup-innerHintBrowseButton       {font-size: 14px !important;}
